--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,20 @@ nav {
   background: #118877;
   width: 100%;
   position: fixed; }
+  nav ul li {
+    display: inline-block;
+    min-width: 4em;
+    font-size: 2em;
+    line-height: 1.5em;
+    background: #494949;
+    color: #f9f9f9;
+    padding: .3em 1em; }
+    nav ul li:hover {
+      background: #216886; }
 
 ul {
-  margin: auto; }
+  margin: auto;
+  list-style: none; }
 
 main {
   position: absolute;
@@ -31,17 +42,6 @@ a {
 @font-face {
   font-family: 'customFont';
   src: url(http://fonts.googleapis.com/css?family=Raleway); }
-ul li {
-  display: inline-block;
-  min-width: 4em;
-  font-size: 2em;
-  line-height: 1.5em;
-  background: #494949;
-  color: #f9f9f9;
-  padding: .3em 1em; }
-  ul li:hover {
-    background: #216886; }
-
 .revealed {
   display: block; }
 
@@ -78,12 +78,20 @@ ul li {
   width: 30%;
   margin: 10px;
   margin-left: 35%;
-  height: auto; }
+  height: auto;
+  overflow: auto; }
   #learn .pair-list table {
     width: 100%;
     color: white;
     table-layout: fixed; }
+  #learn .pair-list .leftcol, #learn .pair-list .rightcol {
+    float: left;
+    width: 50%; }
 #learn .del-row-button {
   width: 100%; }
+#learn .num-of-pairs {
+  color: white; }
+  #learn .num-of-pairs input {
+    text-align: right; }
 
 /*# sourceMappingURL=style.css.map */
