--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,13 @@
+@mixin box-shadow($x, $y, $blur, $spread) {
+  -webkit-box-shadow: $x $y $blur $spread rgba(0,0,0,0.75);
+  -moz-box-shadow:    $x $y $blur $spread rgba(0,0,0,0.75);
+  box-shadow:         $x $y $blur $spread rgba(0,0,0,0.75);
+}
+@mixin rotate($deg) {
+    -ms-transform: rotate($deg);
+    -webkit-transform: rotate($deg);
+    transform: rotate($deg);
+}
 body, nav, ul, table {
   margin: 0;
   padding: 0;
@@ -78,18 +88,19 @@ a {
   main {
     width: 100%;
     margin: 0 auto;
-    margin-top: 200px;
+    // margin-top: 200px;
     text-align: center;
   }
   input, button {
     border: none;
   }
   #pair-list {
-    background: #9E2626;
+    position: relative;
     width: 40%;
     margin: 10px;
     margin-left: 30%;
     height: auto;
+    min-height: 300px;
     overflow: auto;
     & table {
       width: 100%;
@@ -97,13 +108,33 @@ a {
       table-layout: fixed;
     }
     .leftcol, .rightcol {
+      position: absolute;
       float: left;
       width: 50%;
     }
-    li {
-      background: #D5A2A2;
-      margin: 10px 25px;
+    .rightcol {
+      margin-left: 50%;
     }
+    button {
+      margin-top: 240px;
+      position: absolute;
+    }
+  }
+  .line {
+    position: absolute;
+    background-color: #35A769;
+    height: 2px;
+    display: block;
+    border-radius: 1px;
+  }
+  li {
+    background: darken(#668CD6, 20%);
+    color: lighten(#FFFC75, 20%);
+    padding: 3px;
+    border-radius: 5px;
+    margin: 10px 25px;
+    font-size: medium;
+    cursor: pointer;
   }
   .del-row-button {
     width: 100%;
@@ -115,5 +146,16 @@ a {
     }
   }
   .controls {
+  }
+  .mistake {
+    background: #D92424;
+    color: white;
+  }
+  .connect {
+    position: relative;
+    bottom: 3px;
+    background: darken(#668CD6, 40%);
+    color: lighten(#FFFC75, 40%);
+    @include box-shadow(0px, 0px, 1px, 1px);
   }
 }
