--- a/css/style.css
+++ b/css/style.css
@@ -5,21 +5,6 @@ body, nav, ul, table {
 body {
   background: url("../assets/congpent.png"); }
 
-nav {
-  background: #118877;
-  width: 100%;
-  position: fixed; }
-  nav ul li {
-    display: inline-block;
-    min-width: 4em;
-    font-size: 2em;
-    line-height: 1.5em;
-    background: #494949;
-    color: #f9f9f9;
-    padding: .3em 1em; }
-    nav ul li:hover {
-      background: #216886; }
-
 ul {
   margin: auto;
   list-style: none; }
@@ -48,31 +33,15 @@ a {
 .hidden {
   display: none; }
 
-#backbutton {
-  position: fixed;
-  background: #F15454;
-  width: 100px;
-  height: 50px;
-  line-height: 50px;
-  color: white;
-  text-decoration: none;
-  text-align: center;
-  text-shadow: 1px 1px 1px #000; }
-
-#clock {
-  font: bold 24pt sans;
-  background: #E3D394;
-  padding: 10px;
-  border: dashed black 1px;
-  border-radius: 3px; }
-
-#learn main {
+main {
   width: 100%;
   margin: 0 auto;
   text-align: center; }
-#learn input, #learn button {
+
+input, button {
   border: none; }
-#learn #pair-list {
+
+#pair-list {
   position: relative;
   width: 40%;
   margin: 10px;
@@ -80,43 +49,56 @@ a {
   height: auto;
   min-height: 300px;
   overflow: auto; }
-  #learn #pair-list table {
+  #pair-list table {
     width: 100%;
     color: white;
     table-layout: fixed; }
-  #learn #pair-list .leftcol, #learn #pair-list .rightcol {
+  #pair-list .leftcol, #pair-list .rightcol {
     position: absolute;
     float: left;
     width: 50%; }
-  #learn #pair-list .rightcol {
+  #pair-list .rightcol {
     margin-left: 50%; }
-  #learn #pair-list button {
+  #pair-list button {
     margin-top: 240px;
     position: absolute; }
-#learn .line {
+
+.line {
   position: absolute;
   background-color: #35A769;
   height: 2px;
   display: block;
   border-radius: 1px; }
-#learn li {
+
+li {
   background: #2d57a9;
   color: #fffedb;
   padding: 3px;
   border-radius: 5px;
   margin: 10px 25px;
   font-size: medium;
-  cursor: pointer; }
-#learn .del-row-button {
+  cursor: pointer;
+  -webkit-box-shadow: 0.5 0.5 0.5 0.5 rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0.5 0.5 0.5 0.5 rgba(0, 0, 0, 0.75);
+  box-shadow: 0.5 0.5 0.5 0.5 rgba(0, 0, 0, 0.75); }
+
+.del-row-button {
   width: 100%; }
-#learn .num-of-pairs {
+
+.num-of-pairs {
   color: white; }
-  #learn .num-of-pairs input {
+  .num-of-pairs input {
     text-align: right; }
-#learn .mistake {
+
+.mistake {
   background: #D92424;
   color: white; }
-#learn .connect {
+
+.correct {
+  background: #17BB1F;
+  color: white; }
+
+.connect {
   position: relative;
   bottom: 3px;
   background: #182e58;
