--- a/css/style.scss
+++ b/css/style.scss
@@ -13,7 +13,8 @@ body, nav, ul, table {
   padding: 0;
 }
 body {
-  background: url('../assets/congpent.png');
+  background: url('../assets/dark.png');
+  font-family: 'Titillium Web', sans-serif;
 }
 ul {
   margin: auto;
@@ -69,25 +70,43 @@ input, button {
     color: white;
     table-layout: fixed;
   }
-  .leftcol, .rightcol {
-    position: absolute;
-    float: left;
-    width: 50%;
-  }
-  .rightcol {
-    margin-left: 50%;
-  }
+
   button {
     margin-top: 240px;
     position: absolute;
   }
 }
+#leftcol, #rightcol {
+    position: absolute;
+    float: left;
+    width: 50%;
+  }
+  #rightcol {
+    margin-left: 50%;
+  }
 .line {
   position: absolute;
   background-color: #35A769;
   height: 2px;
   display: block;
   border-radius: 1px;
+}
+#message {
+  position: static;
+  margin: 5px auto;
+  border: 1px #EEEEEE dashed;
+  border-radius: 5px;
+  padding: 15px;
+  background: lighten(#6F4545, 50%);
+  color: #161616;
+  font-size: large;
+  text-shadow: 0.5px 0.5px 15px lighten(#000, 40%);
+}
+#remove-message {
+  float: right;
+  cursor: pointer;
+  font-size: large;
+  margin: 5px;
 }
 li {
   background: darken(#668CD6, 20%);
@@ -108,7 +127,7 @@ li {
     text-align: right;
   }
 }
-.controls {
+#controls {
 }
 .mistake {
   background: #D92424;
@@ -121,7 +140,7 @@ li {
 .connect {
   position: relative;
   bottom: 3px;
-  background: darken(#668CD6, 40%);
-  color: lighten(#FFFC75, 40%);
+  background: lighten(#668CD6, 20%);
+  color: darken(#FFFC75, 90%);
   @include box-shadow(0px, 0px, 1px, 1px);
 }
