--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body, nav, ul, table {
   padding: 0; }
 
 body {
-  background: url("../assets/dark.png");
+  background: url("../assets/stardust.png");
   font-family: 'Titillium Web', sans-serif; }
 
 ul {
@@ -47,8 +47,8 @@ input, button {
   width: 40%;
   margin: 10px;
   margin-left: 30%;
+  min-height: 800px;
   height: auto;
-  min-height: 300px;
   overflow: auto; }
   #pair-list table {
     width: 100%;
@@ -95,7 +95,7 @@ li {
   color: #fffedb;
   padding: 3px;
   border-radius: 5px;
-  margin: 10px 25px;
+  margin: 10px 35px;
   font-size: medium;
   cursor: pointer;
   -webkit-box-shadow: 0.5 0.5 0.5 0.5 rgba(0, 0, 0, 0.75);
