--- a/css/style.scss
+++ b/css/style.scss
@@ -13,7 +13,7 @@ body, nav, ul, table {
   padding: 0;
 }
 body {
-  background: url('../assets/dark.png');
+  background: url('../assets/stardust.png');
   font-family: 'Titillium Web', sans-serif;
 }
 ul {
@@ -49,8 +49,8 @@ a {
   display: none;
 }
 main {
-width: 100%;
-margin: 0 auto;
+  width: 100%;
+  margin: 0 auto;
   // margin-top: 200px;
   text-align: center;
 }
@@ -62,28 +62,27 @@ input, button {
   width: 40%;
   margin: 10px;
   margin-left: 30%;
+  min-height: 800px;
   height: auto;
-  min-height: 300px;
   overflow: auto;
   & table {
     width: 100%;
     color: white;
     table-layout: fixed;
   }
-
   button {
     margin-top: 240px;
     position: absolute;
   }
 }
 #leftcol, #rightcol {
-    position: absolute;
-    float: left;
-    width: 50%;
-  }
-  #rightcol {
-    margin-left: 50%;
-  }
+  position: absolute;
+  float: left;
+  width: 50%;
+}
+#rightcol {
+  margin-left: 50%;
+}
 .line {
   position: absolute;
   background-color: #35A769;
@@ -113,7 +112,7 @@ li {
   color: lighten(#FFFC75, 20%);
   padding: 3px;
   border-radius: 5px;
-  margin: 10px 25px;
+  margin: 10px 35px;
   font-size: medium;
   cursor: pointer;
   @include box-shadow(0.5, 0.5, 0.5, 0.5);
