--- a/css/style.scss
+++ b/css/style.scss
@@ -12,9 +12,13 @@ body, nav, ul, table {
   margin: 0;
   padding: 0;
 }
+@font-face {
+  font-family:'customFont';
+  src:url(http://fonts.googleapis.com/css?family=Raleway);
+}
 body {
   background: url('../assets/stardust.png');
-  font-family: 'Titillium Web', sans-serif;
+  font-family: 'customFont','Titillium Web', sans-serif;
 }
 ul {
   margin: auto;
@@ -36,10 +40,6 @@ main {
 a {
   text-decoration: none;
   color: #fff;
-}
-@font-face {
-  font-family:'customFont';
-  src:url(http://fonts.googleapis.com/css?family=Raleway);
 }
 
 .revealed {
@@ -93,13 +93,12 @@ input, button {
 #message {
   position: static;
   margin: 5px auto;
-  border: 1px #EEEEEE dashed;
-  border-radius: 5px;
+  border: 1px #BB7D00 dashed;
   padding: 15px;
   background: lighten(#6F4545, 50%);
   color: #161616;
   font-size: large;
-  text-shadow: 0.5px 0.5px 15px lighten(#000, 40%);
+  text-shadow: 0.5px 0.5px 5px lighten(#000, 40%);
 }
 #remove-message {
   float: right;
