Gruntfile setup, jshint reports too many errors

--- a/css/style.css
+++ b/css/style.css
@@ -1,129 +1,2 @@
-body, nav, ul, table {
-  margin: 0;
-  padding: 0; }
-
-@font-face {
-  font-family: 'customFont';
-  src: url(http://fonts.googleapis.com/css?family=Raleway); }
-body {
-  background: url("../assets/stardust.png");
-  font-family: 'customFont','Titillium Web', sans-serif; }
-
-ul {
-  margin: auto;
-  list-style: none; }
-
-main {
-  position: absolute;
-  margin-top: 5em;
-  text-align: left;
-  font-size: small; }
-  main h1, main p {
-    padding: 2em;
-    font-size: 1.5em; }
-  main a {
-    color: black; }
-
-a {
-  text-decoration: none;
-  color: #fff; }
-
-.revealed {
-  display: block; }
-
-.hidden {
-  display: none; }
-
-main {
-  width: 100%;
-  margin: 0 auto;
-  text-align: center; }
-
-input, button {
-  border: none; }
-
-#pair-list {
-  position: relative;
-  width: 40%;
-  margin: 10px;
-  margin-left: 30%;
-  min-height: 800px;
-  height: auto;
-  overflow: auto; }
-  #pair-list table {
-    width: 100%;
-    color: white;
-    table-layout: fixed; }
-  #pair-list button {
-    margin-top: 240px;
-    position: absolute; }
-
-#leftcol, #rightcol {
-  position: absolute;
-  float: left;
-  width: 50%; }
-
-#rightcol {
-  margin-left: 50%; }
-
-.line {
-  position: absolute;
-  background-color: #35A769;
-  height: 2px;
-  display: block;
-  border-radius: 1px; }
-
-#message {
-  position: static;
-  margin: 5px auto;
-  border: 1px #BB7D00 dashed;
-  padding: 15px;
-  background: #e2d1d1;
-  color: #161616;
-  font-size: large;
-  text-shadow: 0.5px 0.5px 5px #666666; }
-
-#remove-message {
-  float: right;
-  cursor: pointer;
-  font-size: large;
-  margin: 5px; }
-
-li {
-  background: #2d57a9;
-  color: #fffedb;
-  padding: 3px;
-  border-radius: 5px;
-  margin: 10px 35px;
-  font-size: medium;
-  cursor: pointer;
-  -webkit-box-shadow: 0.5 0.5 0.5 0.5 rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0.5 0.5 0.5 0.5 rgba(0, 0, 0, 0.75);
-  box-shadow: 0.5 0.5 0.5 0.5 rgba(0, 0, 0, 0.75); }
-
-.del-row-button {
-  width: 100%; }
-
-.num-of-pairs {
-  color: white; }
-  .num-of-pairs input {
-    text-align: right; }
-
-.mistake {
-  background: #D92424;
-  color: white; }
-
-.correct {
-  background: #17BB1F;
-  color: white; }
-
-.connect {
-  position: relative;
-  bottom: 3px;
-  background: #b6c8ec;
-  color: black;
-  -webkit-box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.75); }
-
+body,nav,ul,table,div,section{margin:0;padding:0}@font-face{font-family:'customFont';src:url(http://fonts.googleapis.com/css?family=Raleway)}body{background:url("../assets/stardust.png");font-family:'customFont','Titillium Web', sans-serif}ul{margin:auto;list-style:none}main{position:absolute;margin-top:5em;text-align:left;font-size:small}main h1,main p{padding:2em;font-size:1.5em}main a{color:black}a{text-decoration:none;color:#fff}.revealed{display:block}.hidden{display:none}main{width:100%;margin:0 auto;text-align:center}input,button{border:none}#pair-list{position:relative;width:40%;margin:10px;margin-left:30%;min-height:800px;height:auto;overflow:auto}#pair-list table{width:100%;color:white;table-layout:fixed}#pair-list button{margin-top:240px;border:0px;padding:5px;position:absolute}#leftcol,#rightcol{position:absolute;float:left;width:50%}#rightcol{margin-left:50%}.line{position:absolute;background-color:white;height:2px;display:block;border-radius:1px}#message{position:static;margin:5px auto;border:1px #BB7D00 dashed;padding:15px;background:#e2d1d1;color:#161616;font-size:large;text-shadow:0.5px 0.5px 5px #666}#remove-message{float:right;cursor:pointer;font-size:large;margin:5px}li{background:#2d57a9;color:#fffedb;padding:3px;border-radius:5px;margin:10px 35px;font-size:medium;cursor:pointer;-webkit-box-shadow:0.5 0.5 0.5 0.5 rgba(0,0,0,0.75);-moz-box-shadow:0.5 0.5 0.5 0.5 rgba(0,0,0,0.75);box-shadow:0.5 0.5 0.5 0.5 rgba(0,0,0,0.75)}.del-row-button{width:100%}.num-of-pairs{color:white}.num-of-pairs input{text-align:right}#controls{background:gray}.mistake{background:#D92424;color:white}.correct{background:#17BB1F;color:white}.connect{position:relative;bottom:3px;background:#b6c8ec;color:#000;-webkit-box-shadow:0px 0px 1px 1px rgba(0,0,0,0.75);-moz-box-shadow:0px 0px 1px 1px rgba(0,0,0,0.75);box-shadow:0px 0px 1px 1px rgba(0,0,0,0.75)}
 /*# sourceMappingURL=style.css.map */
