--- a/css/style.scss
+++ b/css/style.scss
@@ -8,73 +8,76 @@
   -webkit-transform: rotate($deg);
   transform: rotate($deg);
 }
-body, nav, ul, table, div, section {
+body, nav, ul, table, div {
   margin: 0;
   padding: 0;
 }
-@font-face {
-  font-family:'customFont';
-  src:url(http://fonts.googleapis.com/css?family=Raleway);
-}
 body {
   background: url('../assets/stardust.png');
-  font-family: 'customFont','Titillium Web', sans-serif;
+  font-family: 'Titillium Web', sans-serif;
+  position: absolute;
+  width: 100%;
 }
 ul {
   margin: auto;
   list-style: none;
 }
-main {
-  position: absolute;
-  margin-top: 5em;
-  text-align: left;
-  font-size: small;
-  & h1, p {
-    padding: 2em;
-    font-size: 1.5em
-  }
-  & a {
-    color: black;
-  }
-}
 a {
   text-decoration: none;
-  color: #fff;
+  color: #000;
 }
-
-.revealed {
-  display: block;
-}
-.hidden {
-  display: none;
-}
-main {
+nav {
+  position: fixed;
   width: 100%;
+  height: auto;
+  background: url('../assets/light.png') lighten(#FF4354, 15%);
+  z-index: 1000;
+  @include box-shadow(0px, 1px, 10px, .2px);
+  & ul {
+    width: 80%;
+    margin-left: 10%;
+    & li {
+      font-size: large;
+      line-height: 40px;
+      display: inline-block;
+      padding: 0 40px;
+    }
+    &:first-child a {
+      color: #070015;
+      text-shadow: .5px .5px .5px lighten(#fff, 0%);
+    }
+  }
+}
+.content {
+  position: relative;
   margin: 0 auto;
-  // margin-top: 200px;
+  margin-top: 45px;
+  width: 80%;
+  height: auto;
+  font-size: small;
   text-align: center;
 }
-input, button {
-  border: none;
+.controls {
+  text-align: center;
+  position: relative;
+  & button {
+    border: 0;
+    background-color: #E2E2E2;
+    font-family: 'Titillium Web';
+    font-size: large;
+    padding: 0 15px;
+  }
 }
 #pair-list {
-  position: relative;
-  width: 40%;
-  margin: 10px;
-  margin-left: 30%;
-  min-height: 800px;
-  height: auto;
   overflow: auto;
-  & table {
-    width: 100%;
-    color: white;
-    table-layout: fixed;
-  }
-  button {
-    margin-top: 240px;
-    border: 0px;
-    padding: 5px;
-    position: absolute;
+  & li {
+    background: white;
+    padding: 3px;
+    margin: 8px 35px;
+    width: 50%;
+    font-size: medium;
+    cursor: pointer;
+    @include box-shadow(0.5, 0.5, 0.5, 0.5);
   }
 }
 #leftcol, #rightcol {
@@ -84,6 +87,12 @@ input, button {
 }
 #rightcol {
   margin-left: 50%;
+}
+#leftcol li {
+  float: right;
+}
+#rightcol li {
+  float: left;
 }
 .line {
   position: absolute;
@@ -107,28 +116,6 @@ input, button {
   cursor: pointer;
   font-size: large;
   margin: 5px;
-}
-li {
-  background: darken(#668CD6, 20%);
-  color: lighten(#FFFC75, 20%);
-  padding: 3px;
-  border-radius: 5px;
-  margin: 10px 35px;
-  font-size: medium;
-  cursor: pointer;
-  @include box-shadow(0.5, 0.5, 0.5, 0.5);
-}
-.del-row-button {
-  width: 100%;
-}
-.num-of-pairs {
-  color: white;
-  & input {
-    text-align: right;
-  }
-}
-#controls {
-  background: gray;
 }
 .mistake {
   background: #D92424;
