Broke JS into multiple pieces to avoid scrolling, class Pair put to use, to do: refactor check function

--- a/css/style.scss
+++ b/css/style.scss
@@ -127,7 +127,7 @@ nav {
   font-size: large;
   margin: 5px;
 }
-.connect {
+.selected {
   position: relative;
   bottom: 3px;
   background: lighten(#668CD6, 20%) !important;
