--- a/css/style.scss
+++ b/css/style.scss
@@ -12,6 +12,7 @@
     height: $lineWidth;
     width: $width - $lineWidth;
     border-radius: $borderRadius;
+    @include box-shadow(0.5px, 0.5px, 2px, .5px);
   &:after {
     position: absolute;
     background: $color;
@@ -21,10 +22,11 @@
     border-radius: $borderRadius;
     left: ($width/2) - $lineWidth;
     top: -($width/2) + $lineWidth;
+    @include box-shadow(0.5px, 0.5px, 2px, .5px);
   }
 }
 
-body, nav, ul, table, div {
+body, nav, ul, table, div, img, a {
   margin: 0;
   padding: 0;
 }
@@ -45,11 +47,13 @@ a {
 nav {
   position: fixed;
   width: 100%;
-  height: auto;
+  height: 40px;
   background: url('../assets/noisy_net.png') #222222;
   z-index: 1000;
   @include box-shadow(0px, 1px, 10px, .2px);
   & ul {
+    position: absolute;
+    display: inline-block;
     width: 50%;
     margin-left: 15%;
     font-size: 1.1em;
@@ -68,6 +72,24 @@ nav {
       font-size: x-large;
     }
   }
+  & .settings {
+    position: static;
+    float: right;
+    padding-top: 5px;
+    margin-right: 24%;
+    height: 30px;
+    width: 30px;
+    & img {
+      width: 100%;
+      height: 100%;
+    }
+    & a {
+      display: inline-block;
+    }
+  }
+}
+.plus {
+  @include plus-icon(40px, 5px, #121E2F, 2px)
 }
 .content {
   position: relative;
@@ -99,23 +121,8 @@ nav {
     text-decoration: underline;
   }
 }
-.controls {
-  text-align: center;
-  clear: both;
-  position: static;
-  margin-top: 250px;
-  & button {
-    clear: both;
-    border: 0;
-    background-color: #E2E2E2;
-    font-size: large;
-    height: 30px;
-    width: 70px;
-    line-height: 30px;
-    letter-spacing: .5px;
-    @include box-shadow(0.5px, 0.5px, 0.5px, 0.5px);
-  }
-}
+
+
 input[type='submit'] {
   border: 0;
     background-color: #E2E2E2;
@@ -126,7 +133,9 @@ input[type='submit'] {
     @include box-shadow(0.5px, 0.5px, 0.5px, 0.5px);
 }
 #pair-list {
+  position: relative;
   overflow: auto;
+  height: auto;
   margin-top: 150px;
   & li {
     background: white;
@@ -138,6 +147,16 @@ input[type='submit'] {
     letter-spacing: .1px;
     @include box-shadow(0.5px, 0.5px, 0.5px, 0.5px);
   }
+  & button {
+    border: 0;
+    background-color: #E2E2E2;
+    font-size: medium;
+    height: 30px;
+    width: 70px;
+    line-height: 30px;
+    letter-spacing: .5px;
+    @include box-shadow(0.5px, 0.5px, 0.5px, 0.5px);
+}
 }
 #leftcol, #rightcol {
   position: absolute;
