--- a/css/style.scss
+++ b/css/style.scss
@@ -148,6 +148,7 @@ input[type='submit'] {
     @include box-shadow(0.5px, 0.5px, 0.5px, 0.5px);
   }
   & button {
+    margin: 5px;
     border: 0;
     background-color: #E2E2E2;
     font-size: medium;
