--- a/css/app.scss
+++ b/css/app.scss
@@ -10,10 +10,11 @@
     padding: 3px;
     margin: 8px 35px;
     width: 50%;
-    z-index: 11;
+    z-index: 100;
     font-size: medium;
     cursor: pointer;
     letter-spacing: .1px;
+    border-radius: 3px;
     @include box-shadow(0.5px, 0.5px, 0.5px, 0.5px);
   }
 }
@@ -39,7 +40,7 @@
   height: 2px;
   display: block;
   border-radius: 1px;
-  z-index: -1;
+  z-index: 1;
   @include box-shadow(0.2px, 0.2px, 0.2px, 0.2px);
 }
 .line-correct {
