--- a/css/mixins.scss
+++ b/css/mixins.scss
@@ -4,24 +4,39 @@
 @mixin rotate($deg) {
   transform: rotate($deg);
 }
-@mixin plus-icon($width, $lineWidth, $color, $borderRadius){
-    margin: ($width - $lineWidth)/2 $lineWidth/2;
-    display: inline-block;
+%plus-base { // placeholder selector (for use with @extend)
+    display: block;
     position: relative;
+
+    &::after {
+        position: absolute;
+        content: "";
+    }
+}
+
+@mixin plus-icon($width, $lineWidth, $color, $borderRadius) {
+    @extend %plus-base;
+    margin: ($width - $lineWidth)/2 $lineWidth/2;
     background: $color;
     height: $lineWidth;
     width: $width - $lineWidth;
     border-radius: $borderRadius;
-    @include box-shadow(0.5px, 0.5px, 2px, .5px);
-  &:after {
-    position: absolute;
+    &::after {
+        background: $color;
+        height: $width - $lineWidth;
+        width: $lineWidth;
+        border-radius: $borderRadius;
+        left: ($width/2) - $lineWidth;
+        top: -($width/2) + $lineWidth;
+    }
+}
+@mixin cell($color) {
+    text-align: center;
     background: $color;
-    content: "";
-    height: $width - $lineWidth;
-    width: $lineWidth;
-    border-radius: $borderRadius;
-    left: ($width/2) - $lineWidth;
-    top: -($width/2) + $lineWidth;
-    @include box-shadow(0.5px, 0.5px, 2px, .5px);
-  }
+    display: inline-block;
+    border: 1px darken($color, 50%) dotted;
+    padding: 3px 10px;
+    margin-top: 5px;
+    margin-right: 1px;
+    border-radius: 3px;
 }
