--- a/css/style.scss
+++ b/css/style.scss
@@ -2,28 +2,26 @@
 @import 'general';
 @import 'app';
 
-.plus {
-  @include plus-icon(40px, 5px, #121E2F, 2px)
-}
-.content {
-  position: relative;
-  margin: 0 auto;
-  margin-top: 45px;
-  width: 80%;
-  height: auto;
-  font-size: small;
-  text-align: center;
-}
+/* INDEX PAGE */
 .set-tile {
   display: inline-block;
-  padding: 20px;
+  padding: 20px 30px;
   margin: 20px;
+  border-radius: 3px;
   background: lighten(#D0E9F7, 6%);
   @include box-shadow(0.5px, 0.5px, 4px, .5px);
 }
-.set-tile:hover, .plus:hover, button:hover {
+.set-tile:hover, .plus:hover, button:hover, .add-value:hover, .plus-set:hover, input[type='submit']:hover {
   position: relative;
   top: 1px;
+}
+.plus-set {
+  display: inline-block;
+  @include plus-icon(40px, 5px, #00a154, 5px);
+    @include box-shadow(0px, 0px, 1px, 0px);
+  &::after {
+    @include box-shadow(0px, 0px, 1px, 0px);
+  }
 }
 /* RESULTS PAGE */
 .main.results {
@@ -49,19 +47,40 @@
 
 /* VIEW SETS PAGE */
 .main.view {
-  background: #f2f2f2;
   & table {
-    width: 90%;
-    margin: 5%;
+    width: 80%;
+    margin: 10%;
     & .value {
       text-align: left;
-      background: #f8f;
+    }
+    & .value-cell {
+      @include cell(#A1FFD2);
+    }
+    & .key-cell {
+      @include cell(#9FE2FD);
     }
   }
-  .plus {
-    @include plus-icon(15px, 2px, #121E2F, 2px);
-    margin-left: 80%;
-    @include rotate(45deg);
+  .add-value {
+    @include plus-icon(20px, 3px, #00a154, 10px);
+    cursor: pointer;
+    float: right;
+    margin-top: 15px;
+    margin-right: -5px;
+  }
+  #addKey {
+    cursor: pointer;
+  }
+  .add-key-text {
+    display: inline-block;
+    color: #3B3B3B;
+    margin-top: -5px;
+  }
+  .add-key {
+    display: inline-block;
+    @include plus-icon(20px, 3px, #00a154, 5px);
+  }
+  .add-set {
+    padding: 50px;
   }
 }
 table, th, td {
