Fixed practise form submission error, change styles a bit

--- a/css/general.scss
+++ b/css/general.scss
@@ -120,6 +120,7 @@ button {
 	background-color: lighten(#99FFB2, 5%);
 	font-size: medium;
 	height: 30px;
+	color: #000;
 	min-width: 70px;
 	line-height: 30px;
 	letter-spacing: .5px;
