--- a/css/general.scss
+++ b/css/general.scss
@@ -43,6 +43,7 @@ body {
   margin-top: 80px;
   height: auto;
   overflow: hidden;
+  border-radius: 10px;
   text-align: center;
   & div {
   	margin: 0;
@@ -56,9 +57,9 @@ nav {
 	position: fixed;
 	width: 100%;
 	height: 40px;
-	background: url('../assets/noisy_net.png') #222222;
+	background: url('../assets/vertical_cloth.png') #222222;
 	z-index: 1000;
-	@include box-shadow(0px, 1px, 10px, .2px);
+	@include box-shadow(0px, 1px, 4px, .2px);
 	& ul {
 		position: absolute;
 		display: inline-block;
